--- a/app/src/main/res/layout/sample_product.xml
+++ b/app/src/main/res/layout/sample_product.xml
@@ -18,8 +18,8 @@
 
             <TextView
                 android:id="@+id/productname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="21dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="3dp"
                 android:text="Product Name"
@@ -28,8 +28,8 @@
 
             <TextView
                 android:id="@+id/productPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="176dp"
+                android:layout_height="21dp"
                 android:layout_marginStart="8dp"
                 android:text="Productprice"
                 app:layout_constraintStart_toEndOf="@+id/imageViewdisplay"
@@ -37,8 +37,8 @@
 
             <TextView
                 android:id="@+id/productdescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="174dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="13dp"
                 android:text="Productdescription"
